fix mobile style overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 body {
+  padding: 0;
   /* line-height: 2rem; */
-  font-size: 18px;
+  font-size: 16px;
   font-kerning: normal;
   line-height: 2;
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
